--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-time-machine
+title: Welcome to the Octocat’s homepage!
+description: Feel free to follow my journey into learning Webdesign
